--- a/public/main.scss
+++ b/public/main.scss
@@ -27,6 +27,19 @@ $colors: (
 	xs-url-dark: darken(#08ad5f, 10%)
 );
 
+@function color($colorName) {
+	@return map-get($colors, $colorName);
+}
+
+.dark-mode {
+	filter: invert(1) hue-rotate(180deg);
+
+	.invert {
+		filter: invert(1) hue-rotate(180deg);
+	}
+}
+
+/*********************************************/
 .container-decorated {
 	border-radius: 15px 150px 15px 150px;
 	padding: 24px 24px 12px 24px;
@@ -34,6 +47,13 @@ $colors: (
 	// background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23ca1011' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 	margin-top: 5% !important;
 	border: 7px solid #1a1a1a !important;
+}
+
+.clickable-icon {
+	cursor: pointer;
+	&:hover {
+		color: color(light-shade);
+	}
 }
 
 // .testt {
@@ -49,18 +69,7 @@ $colors: (
 		color: black !important;
 	}
 }
-
-@function color($colorName) {
-	@return map-get($colors, $colorName);
-}
-
-.dark-mode {
-	filter: invert(1) hue-rotate(180deg);
-
-	.invert {
-		filter: invert(1) hue-rotate(180deg);
-	}
-}
+/*********************************************/
 
 /* BOOTSTRAP CONFIG */
 @import "../node_modules/bootstrap/scss/functions";
@@ -411,13 +420,14 @@ select:-webkit-autofill {
 	background-image: url("bg/cartographer.png");
 
 	h1 {
-		font-size: 20px;
-		margin: 0 10px;
+		font-size: 24px;
+		margin: 10px 0 5px 0;
 	}
 
 	p {
 		font-size: 15px;
 		opacity: 0.9;
+		text-indent: 5px;
 	}
 
 	.badge-group {
@@ -1653,6 +1663,29 @@ section {
 @media (max-width: 650px) {
 	.skills-text {
 		display: none !important;
+	}
+}
+
+#fp-nav {
+	height: 100% !important;
+	align-items: center;
+	display: flex;
+	ul {
+		height: 70% !important;
+		li {
+			height: 25% !important;
+			a {
+				background-color: #d7d7d7 !important;
+			}
+
+			.active {
+				background-color: color(main) !important;
+			}
+
+			span {
+				background: none;
+			}
+		}
 	}
 }
 
