--- a/public/main.css
+++ b/public/main.css
@@ -1,12 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");
 .dark-mode {
   -webkit-filter: invert(1) hue-rotate(180deg);
           filter: invert(1) hue-rotate(180deg);
@@ -565,17 +558,6 @@ html[data-theme="dark"] {
 	//js script sets data theme
 }
 */
-/* main */
-@font-face {
-  font-family: "Noir";
-  src: url("./fonts/HelveticaNeue Medium.ttf");
-}
-
-@font-face {
-  font-family: "Proto";
-  src: url("./fonts/VolkornRegular.otf") format("opentype");
-}
-
 /* GLOBAL */
 * {
   margin: 0;
@@ -583,7 +565,7 @@ html[data-theme="dark"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto";
+  font-family: "Inter", "Roboto", "sans-serif";
   overflow-wrap: break-word;
   scroll-behavior: smooth;
 }
@@ -711,49 +693,8 @@ body {
   opacity: 0.9;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-textarea {
-  background-color: #f1f1f1 !important;
-  font-weight: bold;
-  color: #33a1fd;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 2px solid transparent !important;
-  padding: 12px 15px;
-  margin: 8px 0;
-  width: 100%;
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
-  -webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-  clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-}
-
 textarea {
   resize: none;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus,
-textarea:focus,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill:focus {
-  outline: none !important;
-  background-color: white !important;
-}
-
-/* Change Autocomplete styles in Chrome*/
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-  -webkit-text-fill-color: #33a1fd !important;
-  border: 2px solid transparent !important;
-  box-shadow: 0 0 0 30px #e6e6e6 inset !important;
-  -webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
-  -moz-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
 }
 
 .control-label {
@@ -951,17 +892,8 @@ h3,
   width: 100px;
 }
 
-.contact-svg {
-  position: absolute;
-  top: clamp(6%, 25%, 80px);
-  right: 4%;
-  width: 35%;
-  opacity: 0.7;
-}
-
 .hero-title {
   /*font-weight: bold;*/
-  font-family: "Noir" !important;
   background: linear-gradient(145deg, #33a1fd, #4cadfd);
   background: -webkit-gradient(145deg, #33a1fd, #4cadfd);
   -webkit-background-clip: text;
@@ -989,10 +921,6 @@ h3,
   .hero-title {
     font-size: 128px;
   }
-}
-
-.hero-title a {
-  font-family: "Noir" !important;
 }
 
 .main-section.even .hero-title {
@@ -1928,6 +1856,7 @@ section {
 }
 
 #fp-nav ul li {
+  margin: 0;
   height: 25% !important;
 }
 
@@ -1941,6 +1870,7 @@ section {
 
 #fp-nav ul li span {
   background: none;
+  display: none;
 }
 
 @media (max-width: 780px) {
