--- a/public/main.scss
+++ b/public/main.scss
@@ -180,25 +180,8 @@ html[data-theme="dark"] {
 	//js script sets data theme
 }
 */
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap"); /* main */
-@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-
-@font-face {
-	font-family: "Noir";
-	src: url("./fonts/HelveticaNeue Medium.ttf");
-}
-
-@font-face {
-	font-family: "Proto";
-	src: url("./fonts/VolkornRegular.otf") format("opentype");
-}
 /* GLOBAL */
 
 * {
@@ -206,7 +189,7 @@ html[data-theme="dark"] {
 	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
-	font-family: "Roboto";
+	font-family: "Inter", "Roboto", "sans-serif";
 	overflow-wrap: break-word;
 	scroll-behavior: smooth;
 }
@@ -326,47 +309,8 @@ body {
 	opacity: 0.9;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-textarea {
-	background-color: #f1f1f1 !important;
-	font-weight: bold;
-	color: color(main);
-	box-sizing: border-box;
-	border: 2px solid transparent !important;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
-	transition: ease-in-out 0.3s;
-	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-}
-
 textarea {
 	resize: none;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus,
-textarea:focus,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill:focus {
-	outline: none !important;
-	background-color: white !important;
-}
-
-/* Change Autocomplete styles in Chrome*/
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-	-webkit-text-fill-color: color(main) !important;
-	border: 2px solid transparent !important;
-	box-shadow: 0 0 0 30px #e6e6e6 inset !important;
-	-webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
-	-moz-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
 }
 
 .control-label {
@@ -538,20 +482,12 @@ h3,
 	width: 100px;
 }
 
-.contact-svg {
-	position: absolute;
-	top: clamp(6%, 25%, 80px);
-	right: 4%;
-	width: 35%;
-	opacity: 0.7;
-}
-
 .hero-title {
 	//font-size: clamp(75px, 9vw, 128px);
 	@include fluid-type($min_width, $max_width, 75px, 128px);
 	//font-size: calc(75px + 4vw); //128px
 	/*font-weight: bold;*/
-	font-family: "Noir" !important;
+	// font-family: "Noir" !important;
 	//color: color(main);
 
 	background: linear-gradient(145deg, color(main), color(main-l));
@@ -568,7 +504,7 @@ h3,
 	opacity: 1;
 
 	a {
-		font-family: "Noir" !important;
+		// font-family: "Noir" !important;
 	}
 }
 
@@ -1674,6 +1610,7 @@ section {
 	ul {
 		height: 70% !important;
 		li {
+			margin: 0;
 			height: 25% !important;
 			a {
 				background-color: #d7d7d7 !important;
@@ -1685,6 +1622,7 @@ section {
 
 			span {
 				background: none;
+				display: none;
 			}
 		}
 	}
