--- a/public/main.scss
+++ b/public/main.scss
@@ -115,67 +115,8 @@ $max_font: 24px;
 	}
 }
 
-/*
-
-document.onkeypress = function (e) {
-	e = e || window.event;
-
-	if (e.keycode === 13) {
-		document.documentElement.classList.toggle('dark-mode')
-
-		document.querySelectorAll('.inverted').forEach((result) => {
-			result.classList.toggle('invert);
-		})
-	}
-}
-
-*/
-
-/* 
-	alt main colors
-		#f34023 orangeish
- 		#5f23f3 purple
-	
-	--light-shade: #cd5c5c;
-	--dark-shade: #0e0e0e;
-	--dark-shade-m1: #232323;
-	--light-gray: #f2f2f2;
-
-	
-	--light-shade: #f1f1f1;
-	--brand-color: #f34023;
-	--dark-shade: #080808;
-	--dark-shade-m1: #232323;
-	--light-gray: #f2f2f2;
-*/
-
 $desktop: 840px;
 
-/*
-@mixin desktop {
-	@media (min-width: #{$desktop}) {
-		@content;
-	}
-}
-
-%text {
-	font-size: 0.9rem;
-	line-height: 1.7em;
-}
-
-.classxx {
-	@extend %text;
-
-	@include desktop {
-		font-size: 24px;
-	}
-}
-
-html[data-theme="dark"] {
-	//transition effect when swapping theme
-	//js script sets data theme
-}
-*/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 /* GLOBAL */
 
@@ -214,68 +155,9 @@ body {
 .text-main {
 	color: color(main);
 }
+/* END GLOBAL */
 
-.action-link {
-	display: block;
-	padding: 10px 0;
-	border: none !important;
-	background: linear-gradient(90deg, color(main), color(main-dark));
-	color: color(light-shade) !important;
-	outline: none;
-	cursor: pointer;
-	transition: 0.3s ease-in-out;
-	opacity: 1;
-	z-index: 5;
-	width: 250px;
-
-	text-decoration: none;
-	font-size: 24px;
-	text-align: center;
-
-	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-
-	&:before {
-		border-radius: inherit;
-		background-image: linear-gradient(270deg, color(main), color(main-light));
-		content: "";
-		display: block;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		opacity: 0;
-		width: 100%;
-		z-index: -100;
-		transition: opacity 0.3s ease-in-out;
-	}
-
-	&:hover {
-		color: color(light-shade) !important;
-		text-decoration: none;
-		transform: scale(1.05);
-
-		-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-		clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-		&:before {
-			opacity: 1;
-		}
-	}
-}
-
-.contact-alert-wrapper {
-	height: 50px;
-}
-
-.alert {
-	margin-bottom: 0;
-	border-radius: 0;
-	border: none;
-
-	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-}
-
+/* FULLPAGE JS MENU */
 .fp-table {
 	display: flex !important;
 }
@@ -304,17 +186,7 @@ body {
 	opacity: 0.9;
 }
 
-textarea {
-	resize: none;
-}
-
-.control-label {
-	font-size: 24px;
-	color: color(dark-shade-lighter);
-	font-weight: bold;
-	margin-bottom: -3px;
-}
-/* END GLOBAL */
+/* END JS MENU */
 
 /* NAVBAR */
 .navbar-brand {
@@ -403,124 +275,26 @@ textarea {
 	background-color: color(light-shade);
 }
 
-h1,
-h2,
-h3,
-.action-link,
-.action-btn,
-.wrapper-icon,
-.skills-text,
-.skills-used-large ul li {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.hero {
-	position: relative;
-
-	h1 {
-		margin-bottom: 15px;
-	}
-
-	h2 {
-		color: color(light-shade);
-		//font-size: 30px;
-		text-indent: 50px;
-	}
-
-	h3 {
-		//font-size: clamp(16px, 3vw, 22px);
-		@include fluid-type($min_width, $max_width, 16px, 22px);
-		color: color(light-shade);
-		opacity: 0.9;
-		margin-top: 6%;
-		margin-left: 13%;
-		margin-bottom: 15px;
-
-		b {
-			font-size: 1.25em;
-			color: color(main-light);
-		}
-
-		i {
-			font-size: 1.9em;
-			font-style: normal;
-			color: color(main);
-		}
-	}
-
-	.portfolio-link {
-		//margin-left: 23%;
-		margin-top: 1em;
-	}
-}
-
-.scroll-indicator {
-	height: 100px;
-	position: relative;
-	left: 0;
-	width: 250px;
-}
-
-.scroll-indicator::before {
-	animation: bounce 1s ease infinite;
-	bottom: 0;
-	color: #fff;
-	content: "╲╱";
-	font-size: 2rem;
-	height: 4rem;
-	left: 50%;
-	letter-spacing: -1px;
-	line-height: 4rem;
-	margin-left: -3rem;
-	opacity: 0.8;
-	position: absolute;
-	text-align: center;
-	width: 100px;
-}
-
-.hero-title {
-	//font-size: clamp(75px, 9vw, 128px);
-	@include fluid-type($min_width, $max_width, 75px, 128px);
-	//font-size: calc(75px + 4vw); //128px
-	/*font-weight: bold;*/
-	// font-family: "Noir" !important;
-	//color: color(main);
-
-	background: linear-gradient(145deg, color(main), color(main-l));
-	background: -webkit-gradient(145deg, color(main), color(main-l));
-	-webkit-background-clip: text;
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
-	padding-right: 10px;
-
-	margin-left: 10%;
-	margin-top: -35px;
-	font-style: italic;
-	display: inline-block;
-	opacity: 1;
-}
-
-.main-section.even .hero-title {
-	color: color(main);
-}
-
-.hero-secondary-title {
-	color: #000000 !important;
-	opacity: 0.85;
-	//font-size: 4vw !important;
-	//font-size: clamp(40px, 5vw, 75px) !important;
-	@include fluid-type($min_width, $max_width, 40px, 75px);
-	margin-top: 4.5rem;
-	line-height: 3.5vw;
-	line-height: clamp(35px, 4vw, 60px);
-}
-
 section {
 	margin-top: -1px !important;
 }
+
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
 
 #skills-section {
 	//background: linear-gradient(to bottom, color(dark-shade) 50%, color(light-shade) 50%);
@@ -637,73 +411,6 @@ section {
 			99% 84.02%,
 			100% 84.4%
 		);
-	}
-
-	.skill-content {
-		position: absolute;
-		top: 55%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-	}
-
-	.action-link {
-		margin-top: 2em !important;
-	}
-
-	.skills-section {
-		h2 {
-			font-size: 2rem;
-			color: color(main-light);
-			opacity: 0.95;
-			margin-left: 3.5em;
-		}
-	}
-
-	.skills-text {
-		text-align: center;
-		color: color(main-light);
-		opacity: 0.75;
-		font-size: 2em;
-		transform: rotate(90deg);
-		position: absolute;
-		right: -2%;
-		top: 45%;
-	}
-
-	.skills-wrapper {
-		display: flex;
-		justify-content: space-evenly;
-		flex-wrap: wrap;
-
-		h1 {
-			font-size: 75px;
-			color: color(dark-shade);
-		}
-
-		.wrapper-icon {
-			margin: auto 0;
-			padding: 0 10px;
-			div {
-				display: flex;
-				align-items: center;
-			}
-			label {
-				display: block;
-				text-align: center;
-				color: color(light-gray);
-			}
-			.skill-icon {
-				max-width: 100%;
-				height: clamp(50px, 5vw, 80px);
-				width: clamp(50px, 5vw, 80px);
-				margin: auto;
-				transition: ease-in-out 0.2s;
-			}
-
-			.icon-hovered {
-				transform: scale(1.15);
-			}
-		}
 	}
 }
 
@@ -947,45 +654,6 @@ section {
 		background: linear-gradient(to bottom, color(light-shade) 88%, color(dark-shade) 12%);
 		background: url("./bg/topography.png");
 	}
-
-	#contact-form {
-		margin-left: 10%;
-	}
-
-	.contact-footer {
-		width: 100%;
-		position: absolute;
-		bottom: 0;
-		background-color: #080808;
-		padding: 0 10%;
-		max-height: 100px;
-
-		ul {
-			margin-top: 0.5rem;
-			margin-bottom: 1rem;
-			list-style: none;
-			display: flex;
-			justify-content: space-evenly;
-		}
-
-		li {
-			display: inline-block;
-			//font-size: 26px;
-			//font-size: clamp(14px, 4vw, 26px);
-			@include fluid-type($min_width, $max_width, 14px, 26px);
-			font-weight: bold;
-			margin: 0 15px;
-			text-align: right;
-
-			span {
-				color: color(light-gray);
-			}
-
-			i {
-				color: color(main);
-			}
-		}
-	}
 }
 
 #portfolio-section {
@@ -1103,63 +771,6 @@ section {
 		);
 		height: 100vh;
 	}
-	#maral {
-		li:hover {
-			transform: scale(1.3);
-			background-color: transparent;
-			color: color(maral);
-		}
-		h1 {
-			background: linear-gradient(145deg, color(maral), color(maral-light));
-			-webkit-background-clip: text;
-			background-clip: text;
-			-webkit-text-fill-color: transparent;
-			padding-right: 10px;
-		}
-
-		b a,
-		b,
-		a {
-			color: color(maral);
-		}
-
-		.action-link {
-			background-image: linear-gradient(90deg, color(maral-light), color(maral)) !important;
-
-			&:before {
-				background-image: linear-gradient(270deg, color(maral-light), color(maral)) !important;
-			}
-		}
-	}
-
-	#xs-url {
-		li:hover {
-			transform: scale(1.3);
-			background-color: transparent;
-			color: color(xs-url);
-		}
-		h1 {
-			background: linear-gradient(145deg, color(xs-url), color(xs-url-light));
-			-webkit-background-clip: text;
-			background-clip: text;
-			-webkit-text-fill-color: transparent;
-			padding-right: 10px;
-		}
-
-		b a,
-		b,
-		a {
-			color: color(xs-url);
-		}
-
-		.action-link {
-			background-image: linear-gradient(90deg, color(xs-url-light), color(xs-url)) !important;
-
-			&:before {
-				background-image: linear-gradient(270deg, color(xs-url-light), color(xs-url)) !important;
-			}
-		}
-	}
 }
 
 /* KEYFRAMES & ANIMATION CLASSES */
@@ -1269,57 +880,6 @@ section {
 	animation: indicatorAnim 0.8s 1 0.6s ease forwards;
 }
 
-@keyframes freelancerAnim {
-	0% {
-		filter: blur(0.5rem);
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	100% {
-		filter: blur(0);
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-.freelancerAnimx {
-	opacity: 0;
-	animation: freelancerAnim 1s 1 0.2s ease forwards;
-}
-
-@keyframes contactSvgAnim {
-	0% {
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(0);
-		opacity: 0.7;
-	}
-}
-
-.contactSvgAnim {
-	opacity: 0;
-	animation: contactSvgAnim 1s 1 0.2s ease forwards;
-}
-
-@keyframes formAnim {
-	0% {
-		filter: blur(0.5rem);
-		transform: scale(0.9);
-		opacity: 0.9;
-	}
-	100% {
-		filter: blur(0);
-		transform: scale(1);
-		opacity: 1;
-	}
-}
-
-.formAnimx {
-	animation: formAnim 1s 1 0s ease;
-}
-
 @keyframes dropDownAnim {
 	0% {
 		transform: translateY(-50px);
@@ -1334,268 +894,24 @@ section {
 .dropDownAnim {
 	animation: dropDownAnim 0.5s 1 0s ease-in-out;
 }
-
-@keyframes iphoneAnim {
-	0% {
-		transform: translateY(-300px);
-		opacity: 0;
-	}
-	100% {
-		transform: translateY(0);
-		opacity: 1;
-	}
-}
-
-.iphoneAnim {
-	animation: iphoneAnim 0.85s 1 0s ease-in-out;
-}
-
-@keyframes leftBracketAnim {
-	0% {
-		transform: translateX(-100px);
-	}
-	100% {
-		transform: translateX(0);
-	}
-}
-
-.leftBracketAnim {
-	animation: leftBracketAnim 0.8s 1 0s ease-in-out;
-}
-
-@keyframes rightBracketAnim {
-	0% {
-		transform: translateX(100px);
-	}
-	100% {
-		transform: translateX(0);
-	}
-}
-
-.rightBracketAnim {
-	animation: rightBracketAnim 0.8s 1 0s ease-in-out;
-}
-
-/*
-@keyframes bgAnim {
-	0% {
-		transform: scale(0.97) translateX(-2%) translateY(-2%);
-	}
-	100% {
-		transform: scale(1) translateX(0) translateY(0);
-	}
-}
-
-.bgAnim {
-	animation: bgAnim 0.5s 1 0s ease;
-}*/
 /* END KEYFRAMES & ANIMATION CLASSES */
 
 @media (max-width: 1700px) {
-	/*	.skills-used-small {
-		display: block !important;
-	}
-	.skills-used-large {
-		display: none;
-	}*/
-
-	.portfolio-info {
-		-ms-flex: 0 0 45% !important;
-		flex: 0 0 45% !important;
-		max-width: 45% !important;
-	}
 }
 
 @media (max-height: 800px) {
-	.hero {
-		h3 {
-			margin-top: 2.5% !important;
-		}
-
-		h2 {
-			margin-top: 2.5rem !important;
-		}
-	}
-
-	#portfolio-section {
-		h1 {
-			margin: 0rem 0 0.5rem 0 !important;
-		}
-
-		.portfolio-item ul li {
-			padding: 5px 10px !important;
-			font-size: 15px !important;
-		}
-
-		.portfolio-info {
-			p.last {
-				margin-bottom: 0 !important;
-			}
-		}
-	}
-
-	#content {
-		height: 150px;
-	}
-
-	.iphone-class.vertical {
-		max-height: 90vh !important;
-		width: auto !important;
-		max-width: 100% !important;
-	}
-
-	#skills-section {
-		.action-link {
-			margin-top: 1em !important;
-		}
-		.skills-section {
-			h2 {
-				margin: 0 auto 10px auto !important;
-				width: fit-content !important;
-			}
-		}
-	}
 }
 
 @media (max-width: 1300px) {
-	.skills-text {
-		right: -10% !important;
-	}
-	.portfolio-thumbnail-wrapper {
-		flex: 0 0 40% !important;
-		max-width: 40% !important;
-	}
-
-	.portfolio-info {
-		flex: 0 0 55% !important;
-		max-width: 55% !important;
-	}
-
-	.skills-wrapper {
-		flex: 0 0 100% !important;
-		max-width: 100% !important;
-		margin-left: 0 !important;
-	}
 }
 
 @media (max-width: 1200px) {
-	.skills-text {
-		right: -10% !important;
-	}
-	#landing-section {
-		.hero-secondary-title {
-			margin-top: 1rem;
-		}
-
-		.portfolio-link {
-			margin-top: 4rem;
-		}
-
-		.freelancer-svg {
-			top: 50% !important;
-		}
-	}
-
-	#contact-section {
-		.contact-svg {
-			margin-top: 5%;
-		}
-	}
-
-	#portfolio-section {
-		.portfolio-item {
-			p {
-				font-size: 18px;
-			}
-		}
-
-		.portfolio-info {
-			-ms-flex: 0 0 55% !important;
-			flex: 0 0 55% !important;
-			max-width: 55% !important;
-		}
-
-		.portfolio-thumbnail-wrapper {
-			-ms-flex: 0 0 35% !important;
-			flex: 0 0 35% !important;
-			max-width: 35% !important;
-		}
-	}
 }
 
 @media (max-width: 992px) {
-	#contact-section {
-		.bg-clipper {
-			height: 102%;
-		}
-		.contact-footer {
-			ul {
-				flex-direction: column;
-			}
-			li {
-				text-align: center;
-			}
-		}
-
-		.contact-svg {
-			margin-top: 10%;
-		}
-	}
-
-	#landing-section {
-		.bg-clipper {
-			height: 110%;
-		}
-	}
-
-	#skills-section {
-		.skill-content {
-			top: 50%;
-		}
-
-		.skills-section {
-			h2 {
-				margin-left: 0;
-			}
-		}
-		.skills-text {
-			transform: rotate(0);
-			font-size: 1.5em;
-			text-align: center;
-			margin-bottom: 0;
-			position: initial !important;
-		}
-	}
-
-	#portfolio-section {
-		.portfolio-thumbnail-wrapper {
-			a {
-				width: 70%;
-			}
-			display: flex;
-		}
-		.portfolio-item {
-			p {
-				margin: 0px 3em 20px 0em;
-				font-size: 18px;
-			}
-
-			.portfolio-info {
-				width: 90%;
-				margin: auto;
-			}
-
-			.skills-used-small {
-				width: 30%;
-			}
-		}
-	}
 }
 
 @media (max-width: 650px) {
-	.skills-text {
-		display: none !important;
-	}
 }
 
 #fp-nav {
@@ -1628,104 +944,12 @@ section {
 		right: -5px !important;
 	}
 
-	.hero {
-		.hero-title {
-			margin-left: 5%;
-			margin-top: -15px;
-			text-indent: 20px;
-		}
-
-		h3 {
-			text-indent: 25px;
-			margin-left: 0;
-		}
-	}
-
-	.skills-list {
-		display: none !important;
-	}
-
 	.fp-controlArrow.fp-prev {
 		left: 10px !important;
 	}
 
 	.fp-controlArrow.fp-next {
 		right: 10px !important;
-	}
-
-	#portfolio-section {
-		.portfolio-thumbnail-wrapper {
-			margin-top: 1.5em;
-			-ms-flex: 0 0 100% !important;
-			flex: 0 0 100% !important;
-			max-width: 100% !important;
-
-			.iphoneVert {
-				display: none;
-			}
-
-			.iphoneSide {
-				display: flex !important;
-				width: 100% !important;
-				justify-content: center;
-			}
-		}
-		.portfolio-item {
-			ul {
-				display: none !important;
-			}
-			.portfolio-info {
-				-ms-flex: 0 0 80% !important;
-				flex: 0 0 80% !important;
-				max-width: 80% !important;
-
-				h1 {
-					margin: 0 !important;
-				}
-
-				p {
-					font-size: 17px !important;
-					margin: 0px 0em 10px 0em;
-				}
-			}
-		}
-	}
-
-	#contact-section {
-		.bg-clipper {
-			height: 105%;
-		}
-
-		.hero-title {
-			margin-left: -4% !important;
-			display: flex;
-			justify-content: center;
-		}
-
-		#contact-form {
-			margin: 2em auto 0 auto !important;
-		}
-
-		.contact-svg {
-			display: none;
-		}
-	}
-
-	#skills-section {
-		.skills-text {
-			text-align: center;
-		}
-		.hero-title {
-			margin-left: -4% !important;
-			display: flex;
-			justify-content: center;
-		}
-
-		.skills-wrapper {
-			h1 {
-				font-size: 40px;
-			}
-		}
 	}
 }
 
@@ -1847,85 +1071,10 @@ section {
 			);
 			// clip-path: polygon(0 0, 100% 0, 100% 96%, 75% 94%, 10% 91%, -13% 89%) !important;
 		}
-		.skill-content {
-			position: initial;
-			transform: none;
-		}
-		.skills-text {
-			display: none !important;
-		}
-		.skills-section {
-			h2 {
-				font-size: 1.25em;
-			}
-		}
-	}
-
-	#landing-section {
-		.freelancer-svg {
-			display: none !important;
-		}
-
-		.hero-title {
-			margin-left: 0% !important;
-			text-align: center;
-		}
-
-		.portfolio-link {
-			margin-top: 2rem !important;
-			margin: auto;
-		}
-
-		.scroll-indicator {
-			width: 100%;
-			margin: auto;
-		}
-	}
-
-	#portfolio-section {
-		.portfolio-item {
-			.skill-call-wrapper {
-				margin-bottom: 2em;
-			}
-		}
-		.bg-clipper {
-			height: 105vh;
-			-webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 80% 95%, 50% 95%, 0 93%) !important;
-			clip-path: polygon(0 0, 100% 0, 100% 96%, 80% 95%, 50% 95%, 0 93%) !important;
-		}
-	}
-
-	#contact-section {
-		.bg-clipper {
-			//height: 106vh;
-			position: relative;
-			/*
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(95%, #f1f1f1), color-stop(5%, #151515));
-			background: linear-gradient(to bottom, #f1f1f1 95%, #151515 5%);*/
-		}
-
-		.contact-footer {
-			position: absolute;
-			bottom: 0%;
-			margin-bottom: 1%;
-		}
-
-		#contact-form {
-			padding-bottom: 2em;
-		}
 	}
 
 	.bg-clipper {
 		height: auto !important;
-	}
-
-	#skills-section .action-link {
-		margin-top: 0 !important;
-		margin-bottom: 2.5em !important;
-	}
-
-	.portfolio-info {
-		margin-bottom: 2em !important;
 	}
 }
 
@@ -1937,7 +1086,6 @@ section {
 	}
 }
 
-/* TOOLTIP */
 /* TOOLTIP */
 .tooltipSpecial {
 	width: fit-content;
