--- a/public/main.scss
+++ b/public/main.scss
@@ -43,7 +43,7 @@ $colors: (
 .container-decorated {
 	border-radius: 15px 150px 15px 150px;
 	padding: 24px 24px 12px 24px;
-	background: url("./bg/topography.png");
+	background: url("/bg/topography.png");
 	// background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23ca1011' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 	margin-top: 5% !important;
 	border: 7px solid #1a1a1a !important;
@@ -62,7 +62,7 @@ $colors: (
 		border: 10px solid #0c0c0c !important;
 	}
 	.paragraph {
-		color: black !important;
+		// color: black !important;
 	}
 }
 /*********************************************/
@@ -221,7 +221,7 @@ body {
 /* END NAVBAR */
 
 .project-item {
-	background-image: url("bg/cartographer.png");
+	background-image: url("/bg/cartographer.png");
 
 	h1 {
 		font-size: 24px;
@@ -288,12 +288,12 @@ body {
 
 #skills-section {
 	//background: linear-gradient(to bottom, color(dark-shade) 50%, color(light-shade) 50%);
-	background: url("./bg/cartographer.png");
+	background: url("/bg/cartographer.png");
 
 	.bg-clipper {
 		height: 102vh;
 		//background-color: color(dark-shade);
-		// background: url("./bg/cartographer.png");
+		// background: url("/bg/cartographer.png");
 		// clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 		// clip-path: polygon(
 		// 	100% 0%,
@@ -405,12 +405,11 @@ body {
 
 #landing-section {
 	//background-color: color(light-shade);
-	//	background: url("./svg/idk2.svg");
-	background: url("./bg/topography.png");
+	background: url("/bg/topography.png");
 	.bg-clipper {
 		height: 100%;
-		//background-color: color(dark-shade);background: url("./bg/cartographer.png");
-		background: url("./bg/cartographer.png");
+		//background-color: color(dark-shade);background: url("/bg/cartographer.png");
+		background: url("/bg/cartographer.png");
 		//background-size: cover;
 
 		/*
@@ -641,16 +640,16 @@ body {
 			100% 84.4%
 		);
 		background: linear-gradient(to bottom, color(light-shade) 88%, color(dark-shade) 12%);
-		background: url("./bg/topography.png");
+		background: url("/bg/topography.png");
 	}
 }
 
 #portfolio-section {
 	//background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
-	background: url("./bg/cartographer.png");
+	background: url("/bg/cartographer.png");
 	.bg-clipper {
 		//background-color: color(light-shade);
-		background: url("./bg/topography.png");
+		background: url("/bg/topography.png");
 
 		// clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
 		clip-path: polygon(
