--- a/public/main.scss
+++ b/public/main.scss
@@ -776,7 +776,7 @@ div.form-control {
 
       a {
         background-color: #d7d7d7 !important;
-        // #2f3234//!dark
+        // #2f3234//!dark!
       }
 
       .active {
