--- a/public/main.css
+++ b/public/main.css
@@ -472,11 +472,11 @@ html[data-theme=dark] {
 }
 
 .badge-primary {
-  background-color: #33a1fd;
+  background-color: #1272c3;
 }
 
 .badge-secondary {
-  background-color: #4291d3;
+  background-color: #2f587a;
 }
 
 /* GLOBAL */
